--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body {
   
 <!-- ░░░░░░░░░░░░░░░░░░░░TU ZACZYNA SIĘ GŁÓWNY KONTENER░░░░░░░░░░░░░░░░░░░ -->
 
- <!-- ░░░░░STYL░░░░░░░░ TABELA: katgo-table-2x2 ░░░░░░░░░░░░░░░░░░░░ -->
+<!-- ░░░░░STYL░░░░░░░░ TABELA: katgo-table-2x2 ░░░░░░░░░░░░░░░░░░░░ -->
 <style>
 .katgo-table-2x2 {
   width: 100%;
@@ -211,6 +211,8 @@ body {
         text-align: center;
         cursor: pointer;
         user-select: none;
+        font-size: 16px;
+        padding: 6px 10px;
       }
 
       .katgo-projects-table td {
@@ -287,7 +289,6 @@ body {
   </tr>
 </table>
 <!-- ░░░░░KONIEC░░░░░░░░░░ TABELA: katgo-table-2x2 ░░░░KONIEC░░░░░░░░░░░░░░ -->
-
 
   
   <br>
