--- a/index.html
+++ b/index.html
@@ -220,56 +220,116 @@ body {
       }
 
       .katgo-projects-table th:nth-child(1),
-      .katgo-projects-table td:nth-child(1),
-      .katgo-projects-table th:nth-child(2),
-      .katgo-projects-table td:nth-child(2),
-      .katgo-projects-table th:nth-child(3),
-      .katgo-projects-table td:nth-child(3),
-      .katgo-projects-table th:nth-child(4),
-      .katgo-projects-table td:nth-child(4),
-      .katgo-projects-table th:nth-child(5),
-      .katgo-projects-table td:nth-child(5),
-      .katgo-projects-table th:nth-child(8),
-      .katgo-projects-table td:nth-child(8),
-      .katgo-projects-table th:nth-child(9),
-      .katgo-projects-table td:nth-child(9),
-      .katgo-projects-table th:nth-child(10),
-      .katgo-projects-table td:nth-child(10) {
-        width: 3%;
-      }
+.katgo-projects-table td:nth-child(1) {
+  width: 4%;
+}
 
-      .katgo-projects-table th:nth-child(6),
-      .katgo-projects-table td:nth-child(6) {
-        width: 20%;
-      }
+.katgo-projects-table th:nth-child(2),
+.katgo-projects-table td:nth-child(2) {
+  width: 3%;
+}
 
-      .katgo-projects-table th:nth-child(7),
-      .katgo-projects-table td:nth-child(7) {
-        width: 56%;
-      }
+.katgo-projects-table th:nth-child(3),
+.katgo-projects-table td:nth-child(3) {
+  width: 4.5%;
+}
+
+.katgo-projects-table th:nth-child(4),
+.katgo-projects-table td:nth-child(4) {
+  width: 4.5%;
+}
+
+.katgo-projects-table th:nth-child(5),
+.katgo-projects-table td:nth-child(5) {
+  width: 5.5%;
+}
+
+.katgo-projects-table th:nth-child(6),
+.katgo-projects-table td:nth-child(6) {
+  width: 20%;
+}
+
+.katgo-projects-table th:nth-child(7),
+.katgo-projects-table td:nth-child(7) {
+  width: 56%;
+}
+
+.katgo-projects-table th:nth-child(8),
+.katgo-projects-table td:nth-child(8) {
+  width: 0.5%;
+}
+
+.katgo-projects-table th:nth-child(9),
+.katgo-projects-table td:nth-child(9) {
+  width: 0.5%;
+}
+
+.katgo-projects-table th:nth-child(10),
+.katgo-projects-table td:nth-child(10) {
+  width: 0.5%;
+}
+
       </style>
 
       <!-- ░░░░░░░░░░░ TABELA: katgo-projects-table ░░░░░░░░░░ -->
       <table class="katgo-projects-table" id="katgo-projects-table">
         <thead>
           <tr>
-            <th onclick="sortTable(0)">1 ↑↓</th>
-            <th onclick="sortTable(1)">2 ↑↓</th>
-            <th onclick="sortTable(2)">3 ↑↓</th>
-            <th onclick="sortTable(3)">4 ↑↓</th>
-            <th onclick="sortTable(4)">5 ↑↓</th>
+            <th onclick="sortTable(0)">📱/💻 ↑↓</th>
+            <th onclick="sortTable(1)">🕒 ↑↓</th>
+            <th onclick="sortTable(2)">📅 ↑↓</th>
+            <th onclick="sortTable(3)">🏷️ ↑↓</th>
+            <th onclick="sortTable(4)">🗂️ ↑↓</th>
             <th onclick="sortTable(5)">PROJEKTY ↑↓</th>
             <th>CHECKBOXY</th>
-            <th onclick="sortTable(7)">8 ↑↓</th>
-            <th onclick="sortTable(8)">9 ↑↓</th>
-            <th onclick="sortTable(9)">10 ↑↓</th>
+            <th onclick="sortTable(7)">1 ↑↓</th>
+            <th onclick="sortTable(8)">2 ↑↓</th>
+            <th onclick="sortTable(9)">3 ↑↓</th>
           </tr>
         </thead>
         <tbody>
+
+
+ <!-- ░░░░░░░░░░░░░░░░░░░░░░░░░░ SAHARA ░░░░░░░░░░░░░░░░░░░░ --> 
+
+          <!--------------------------------- SAHARA ---------------------------->
+          
           <tr>
-            <td>11</td><td>12</td><td>13</td><td>14</td><td>15</td>
-            <td>PROJEKT A</td><td>CHECK</td><td>18</td><td>19</td><td>20</td>
+            <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara <span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">
+    👉wyślij tokeny testowe $SAHARA na swój adres Rabby<br>
+👉odwiedź stronki visit linkami na galxe<br>
+👉w Gobby Desert odbierz punkty za 3 misje<br>
+👉wykonuj misje socialowe na discordzie<br>
+  </span></span></td>
+            <td><a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5">SAHARA GALXE</a> (<a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5" target="_blank">C</a>)</td>
+            <td><label><input type="checkbox" class="check table1" data-id="sahara1"> CHECK</label></td>
+            <td></td><td></td><td></td>
           </tr>
+
+<tr>
+  <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+  <td><a href="https://legends.saharalabs.ai/">SAHARA LEGENDS</a> (<a href="https://legends.saharalabs.ai/" target="_blank">C</a>)</td>
+  <td><label><input type="checkbox" class="check table1" data-id="sahara2"> CHECK</label></td>
+  <td></td><td></td><td></td>
+</tr>
+
+<tr>
+  <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+  <td><a href="https://app.saharalabs.ai/developer-platform/main/explore">SAHARA SIWA TESTNET</a> (<a href="https://app.saharalabs.ai/developer-platform/main/explore" target="_blank">C</a>)</td>
+  <td><label><input type="checkbox" class="check table1" data-id="sahara3"> CHECK</label></td>
+  <td></td><td></td><td></td>
+</tr>
+
+<tr>
+  <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+  <td><a href="https://app.saharalabs.ai/#/">SAHARA DATA SERVICES</a> (<a href="https://app.saharalabs.ai/#/" target="_blank">C</a>)</td>
+  <td><label><input type="checkbox" class="check table1" data-id="sahara4"> CHECK</label></td>
+  <td></td><td></td><td></td>
+</tr>
+
+ <!---------------------------------------------------------->
+
+          
           <tr>
             <td>111</td><td>112</td><td>113</td><td>114</td><td>115</td>
             <td>PROJEKT B</td><td>CHECK</td><td>118</td><td>119</td><td>110</td>
