--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@ body {
 
       .katgo-projects-table th:nth-child(1),
 .katgo-projects-table td:nth-child(1) {
-  width: 4%;
+  width: 5%;
 }
 
 .katgo-projects-table th:nth-child(2),
 .katgo-projects-table td:nth-child(2) {
-  width: 3%;
+  width: 2%;
 }
 
 .katgo-projects-table th:nth-child(3),
@@ -236,7 +236,7 @@ body {
 
 .katgo-projects-table th:nth-child(4),
 .katgo-projects-table td:nth-child(4) {
-  width: 4.5%;
+  width: 5.5%;
 }
 
 .katgo-projects-table th:nth-child(5),
@@ -246,27 +246,27 @@ body {
 
 .katgo-projects-table th:nth-child(6),
 .katgo-projects-table td:nth-child(6) {
-  width: 20%;
+  width: 19,2%;
 }
 
 .katgo-projects-table th:nth-child(7),
 .katgo-projects-table td:nth-child(7) {
-  width: 56%;
+  width: 58%;
 }
 
 .katgo-projects-table th:nth-child(8),
 .katgo-projects-table td:nth-child(8) {
-  width: 0.5%;
+  width: 0.1%;
 }
 
 .katgo-projects-table th:nth-child(9),
 .katgo-projects-table td:nth-child(9) {
-  width: 0.5%;
+  width: 0.1%;
 }
 
 .katgo-projects-table th:nth-child(10),
 .katgo-projects-table td:nth-child(10) {
-  width: 0.5%;
+  width: 0.1%;
 }
 
       </style>
@@ -295,13 +295,13 @@ body {
           <!--------------------------------- SAHARA ---------------------------->
           
           <tr>
-            <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara <span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">
+            <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+            <td><a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5">SAHARA GALXE</a> (<a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5" target="_blank">C</a>)<span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">
     👉wyślij tokeny testowe $SAHARA na swój adres Rabby<br>
 👉odwiedź stronki visit linkami na galxe<br>
 👉w Gobby Desert odbierz punkty za 3 misje<br>
 👉wykonuj misje socialowe na discordzie<br>
   </span></span></td>
-            <td><a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5">SAHARA GALXE</a> (<a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5" target="_blank">C</a>)</td>
             <td><label><input type="checkbox" class="check table1" data-id="sahara1"> CHECK</label></td>
             <td></td><td></td><td></td>
           </tr>
@@ -321,7 +321,7 @@ body {
 </tr>
 
 <tr>
-  <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+  <td>tel/komp</td><td>1</td><td>daily</td><td>zakończone</td><td>Sahara</td>
   <td><a href="https://app.saharalabs.ai/#/">SAHARA DATA SERVICES</a> (<a href="https://app.saharalabs.ai/#/" target="_blank">C</a>)</td>
   <td><label><input type="checkbox" class="check table1" data-id="sahara4"> CHECK</label></td>
   <td></td><td></td><td></td>
@@ -331,12 +331,12 @@ body {
 
           
           <tr>
-            <td>111</td><td>112</td><td>113</td><td>114</td><td>115</td>
-            <td>PROJEKT B</td><td>CHECK</td><td>118</td><td>119</td><td>110</td>
+            <td>tel</td><td>2</td><td>weekly</td><td>do rozpoczęcia</td><td>Monad</td>
+            <td>PROJEKT B</td><td>CHECK</td><td></td><td></td><td></td>
           </tr>
           <tr>
-            <td>1111</td><td>1112</td><td>1113</td><td>1114</td><td>1115</td>
-            <td>PROJEKT C</td><td>CHECK</td><td>1118</td><td>1119</td><td>1110</td>
+            <td>komp</td><td>3</td><td>monthly</td><td>aktualne</td><td>Pozostałe</td>
+            <td>PROJEKT C</td><td>CHECK</td><td></td><td></td><td></td>
           </tr>
         </tbody>
       </table>
