--- a/index.html
+++ b/index.html
@@ -216,8 +216,14 @@ body {
       }
 
       .katgo-projects-table td {
-        text-align: left;
-      }
+  text-align: center;
+}
+
+.katgo-projects-table td:nth-child(6),
+.katgo-projects-table td:nth-child(7) {
+  text-align: left;
+}
+
 
       .katgo-projects-table th:nth-child(1),
 .katgo-projects-table td:nth-child(1) {
