--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ body {
           <!--------------------------------- SAHARA ---------------------------->
           
           <tr>
-            <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+            <td>tel/komp</td><td>1</td><td>daily</td><td>zakończone</td><td>Sahara</td>
             <td><a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5">SAHARA GALXE</a> (<a href="https://app.galxe.com/quest/SaharaAI/GCNLYtpFM5" target="_blank">C</a>)<span class="tooltip-icon" onclick="toggleTooltip(this)">⚠️<span class="tooltip-text">
     👉wyślij tokeny testowe $SAHARA na swój adres Rabby<br>
 👉odwiedź stronki visit linkami na galxe<br>
@@ -313,14 +313,14 @@ body {
           </tr>
 
 <tr>
-  <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+  <td>tel/komp</td><td>1</td><td>daily</td><td>zakończone</td><td>Sahara</td>
   <td><a href="https://legends.saharalabs.ai/">SAHARA LEGENDS</a> (<a href="https://legends.saharalabs.ai/" target="_blank">C</a>)</td>
   <td><label><input type="checkbox" class="check table1" data-id="sahara2"> CHECK</label></td>
   <td></td><td></td><td></td>
 </tr>
 
 <tr>
-  <td>Tel/Komp</td><td>1</td><td>Daily</td><td>Zakończone</td><td>Sahara</td>
+  <td>tel/komp</td><td>1</td><td>daily</td><td>zakończone</td><td>Sahara</td>
   <td><a href="https://app.saharalabs.ai/developer-platform/main/explore">SAHARA SIWA TESTNET</a> (<a href="https://app.saharalabs.ai/developer-platform/main/explore" target="_blank">C</a>)</td>
   <td><label><input type="checkbox" class="check table1" data-id="sahara3"> CHECK</label></td>
   <td></td><td></td><td></td>
@@ -337,11 +337,11 @@ body {
 
           
           <tr>
-            <td>tel</td><td>2</td><td>weekly</td><td>do rozpoczęcia</td><td>Monad</td>
+            <td>telefon</td><td>2</td><td>weekly</td><td>do rozpoczęcia</td><td>Monad</td>
             <td>PROJEKT B</td><td>CHECK</td><td></td><td></td><td></td>
           </tr>
           <tr>
-            <td>komp</td><td>3</td><td>monthly</td><td>aktualne</td><td>Pozostałe</td>
+            <td>komputer</td><td>3</td><td>monthly</td><td>aktualne</td><td>Pozostałe</td>
             <td>PROJEKT C</td><td>CHECK</td><td></td><td></td><td></td>
           </tr>
         </tbody>
